Fix pricing-table's data row not showing proper background colour

--- a/src/assets/scss/pages/pricing/pricing.scss
+++ b/src/assets/scss/pages/pricing/pricing.scss
@@ -18,6 +18,9 @@
                     tr {
                         background-color: white;
                     }
+                    tr.background-color-grey {
+                        background-color: #f7f7f7;
+                    }
                 }
             }
         }
